# synthpanel

./: .gitignore  PLAN.md  README.md  generate_personas.py  pyproject.toml
.github/workflows/: ci.yml
synthpanel/: __init__.py  cli.py  config.py  orchestrator.py
synthpanel/agent/: __init__.py  actions.py  anthropic_provider.py  llm.py  loop.py  ollama_provider.py  openai_provider.py  prompts.py  providers.py
synthpanel/browser/: __init__.py  base.py  observer.py  session.py
synthpanel/persona/: __init__.py  factors.py  identity.py  llm_recommender.py  loader.py  models.py  personality.py  recommender.py  tags.py
synthpanel/report/: __init__.py  aggregate.py  languages.py  models.py  pricing.py  render.py
synthpanel/web/: __init__.py  app.py  progress.py  runner.py  store.py
synthpanel/web/templates/: base.html  onboarding.html  persona_new.html  personas.html  preferences.html  project_detail.html  project_new.html  project_personas.html  projects.html  run_detail.html  welcome.html
tests/: fakes.py  test_anthropic_provider.py  test_e2e_browser.py  test_focus.py  test_identity.py  test_language.py  test_llm_recommender.py  test_loop.py  test_model_discovery.py  test_observer.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_persona.py  test_persona_store.py  test_persona_votes.py  test_personality.py  test_pricing.py  test_progress.py  test_prompts.py  test_providers.py  test_recommender.py  test_report.py  test_runner.py  test_store.py  test_tags.py  test_web.py  test_web_language.py  test_web_models.py  test_web_personality.py  test_web_personas.py  test_web_recommend.py  test_web_report.py  test_web_sse.py  test_web_two_step.py  test_web_votes.py  test_web_welcome.py
