[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthpanel"
version = "0.1.0"
description = "LLM persona-driven parallel usability testing for web apps, powered by Playwright."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SynthPanel" }]
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
synthpanel = "synthpanel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["synthpanel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
