[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthpanel"
version = "0.1.0"
description = "LLM persona-driven parallel usability testing for web apps, powered by Playwright."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SynthPanel" }]
dependencies = [
    "playwright>=1.49",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "openai>=1.40",
    "ollama>=0.3",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
synthpanel = "synthpanel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["synthpanel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that drive a real browser via Playwright (deselected by default)",
]
# Fast suite stays hermetic; run browser tests explicitly with `pytest -m e2e`.
addopts = "-m 'not e2e'"
filterwarnings = [
    # Starlette's TestClient warns about httpx vs httpx2 — a third-party
    # deprecation we can't act on yet; silence just that message.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
